# vofi

./: .gitignore  CMakeLists.txt  README.md
demo_src/: 4D_int  4D_int.c  4d.py  centroid_test  centroid_test.c  if_centro.py  sphere_centroid_test  sphere_centroid_test.c  test  test.c  vizualize_sphere.py
example/: test_3d.c
include/: vofi.h  vofi_GL_nodes.h  vofi_GL_weights.h  vofi_stddecl.h
src/: CMakeLists.txt  checkboundary.c  checkconsistency.c  getarclength.c  getcc.c  getintersections.c  getlimits.c  getmin.c  gettype.c  getzero.c  integrate.c  orderdirs.c  tecplot.c  triangulate.c
